# CouncilOfDicks

./: .dockerignore  .gitignore  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  package.json  vite.config.ts
.github/: copilot-instructions.md
.github/agents/: monks.agent.md
.github/workflows/: rust-ci.yml
config/: agents.json  app_config.json  constitution.md
docs/: AI_PROVIDERS.md  AI_RANKING_SYSTEM.md  ANTI_GAMING_MECHANISMS.md  ARCHITECTURE_DISCUSSION.md  CHAT_INTERFACE.md  CONTRIBUTING.md  CORE_VISION.md  COUNCIL_OF_DICKS_CONCEPT.md  CROSS_PLATFORM_IMPLEMENTATION.md  CRYPTO.md  DELIBERATION_FLOW.md  DOCKER.md  EVALUATION_REPORT.md  HEADLESS.md  LESSONS_LEARNED.md  MCP.md  PLANNED_FEATURES.md  PROVIDER_MANAGEMENT_UI.md  ROADMAP.md  SAFETY_AND_MEMORY.md  TODO.md  UI_UX_SPECS.md
docs/evaluations/: README.md
scripts/: dev-web.sh  dev.sh  install.sh  mcp-client-example.py  start-web-server.sh  test-backend.sh  test-ollama.sh  test-rag-scoped.sh
src/: App.svelte  App.svelte.old  ChatInterface.svelte  ConstitutionPanel.svelte  CouncilPanel.svelte  PoHVIndicator.svelte  ProvidersPanel.svelte  TopicControl.svelte  TypewriterText.svelte  api-adapter.ts  api.ts  main.ts
src-tauri/: Cargo.toml  README.md  council_identity.key  tauri.conf.json
src-tauri/src/: agents.rs  benchmarks.rs  chat_bot.rs  config.rs  constitution.rs  council.rs  crypto.rs  deliberation.rs  http_server.rs  knowledge.rs  lib.rs  logger.rs  main.rs  mcp.rs  metrics.rs  ollama.rs  p2p.rs  p2p_manager.rs  personalities.rs  pohv.rs  prompt.rs  protocol.rs  provider_dispatch.rs  reputation.rs  state.rs  tests.rs  topic_manager.rs  verdict_store.rs  web_server.rs
src-tauri/src/chat/: channel.rs  duplicate_filter.rs  mod.rs  rate_limit.rs  spam_detector.rs
src-tauri/src/providers/: config.rs  google.rs  mod.rs  ollama.rs  openai.rs  registry.rs
test/: consolerrors.txt  test-web-mode.html  test-websocket.html
