[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["serde"] }
rand = "0.8"
base64 = "0.22"

# P2P networking
libp2p = { version = "0.54", features = [
    "tcp",
    "mdns",
    "noise",
    "yamux",
    "gossipsub",
    "identify",
    "kad",
    "macros",
    "tokio"
] }
futures = "0.3"
async-trait = "0.1"
