[package]
name = "app"
version = "0.6.0"
description = "Council Of Dicks - Decentralized AI consensus network"
authors = ["m0nk111"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["serde"] }
rand = "0.8"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4", "serde"] }

# Database & Vector Search
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }
sqlite-vec = "0.1"

# NLP & Embeddings
ndarray = "0.16"

# P2P networking
libp2p = { version = "0.54", features = [
    "tcp",
    "mdns",
    "noise",
    "yamux",
    "gossipsub",
    "identify",
    "kad",
    "macros",
    "tokio"
] }
futures = "0.3"
async-trait = "0.1"

# HTTP API server
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
hyper = "1.0"
